# Project2-Stream-Compaction

./: .gitignore  CMakeLists.txt  Performance.xlsx  README.md  execution-data.xlsx  performance_automator.sh  pj2.txt  plot.py  timings.txt
analysis/data/: 12.csv  16.csv  20.csv  23.csv  8.csv
analysis/project/: graph.py  pyproject.toml
project2analysis/: 565hw2 1052caacc10180799430ec3107c815e1.md
src/: main.cpp  testing_helpers.hpp
stream_compaction/: CMakeLists.txt  common.cu  common.h  cpu.cu  cpu.h  efficient-optimized.cu  efficient-optimized.h  efficient-thread-optimized.cu  efficient-thread-optimized.h  efficient.cu  efficient.h  efficient_optimized.cu  efficient_optimized.h  efficient_sharedmem.cu  efficient_sharedmem.h  naive.cu  naive.h  radix-sort.cu  radix-sort.h  radix.cu  radix.h  radixSort.cu  radixSort.h  radix_sort.cu  radix_sort.h  radixsort.cu  radixsort.h  sort.cu  sort.h  thrust.cu  thrust.h
tools/: data_processing.py
writeup/: rawdata.xlsx
